<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_add_user"
        android:icon="@drawable/ic_person_add_24"
        android:title="@string/add_user"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_name"
        android:title="@string/action_sort_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_date"
        android:title="@string/action_sort_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_birthday_in_year"
        android:title="@string/action_sort_birthday_in_year"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_age"
        android:title="@string/action_sort_age"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>