<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.srh.randomuserapp.ui.fragments.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />

        <action
            android:id="@+id/action_FirstFragment_to_CameraFragment"
            app:destination="@id/CameraFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.srh.randomuserapp.ui.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <argument
            android:name="userId"
            app:argType="string" />

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="false" />

        <action
            android:id="@+id/action_SecondFragment_to_CameraFragment"
            app:destination="@id/CameraFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />

    </fragment>

    <fragment
        android:id="@+id/CameraFragment"
        android:name="com.srh.randomuserapp.ui.fragments.CameraFragment"
        android:label="@string/camera_fragment_label"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_CameraFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="false" />

        <action
            android:id="@+id/action_CameraFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right">

            <argument
                android:name="userId"
                app:argType="string" />

        </action>

    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.srh.randomuserapp.ui.fragments.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="false" />

        <action
            android:id="@+id/action_SettingsFragment_to_CameraFragment"
            app:destination="@id/CameraFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />

    </fragment>

</navigation>